# spatialops

./: .env.github.example  .env.nautilus.example  .env.publish.example  .env.s3.example  .gitignore  LICENSE  Makefile  README.md  example.config.mk
.github/workflows/: python.yml
charts/jupyter/: values.yaml
charts/jupyter/templates/: NOTES.txt  deployment.yaml  ingress.yaml  pvc.yaml
deployment/: docker-login.sh  ghcr.secrets.sh
environment/: Dockerfile  environment.mk  environment.yml  jupyter_notebook_config.py
examples/: 1_ACA.ipynb  2_FABDEM.ipynb  3_GEBCO.ipynb  4_Merge.ipynb  topobathy.yaml
installations/: install_pmtiles.sh
scripts/: copy_to_storage.py  dev  sync_file.py  test_version_alignment.py
services/: README.md  zarr_server.Dockerfile  zarr_server_test.Dockerfile
services/cog_server/: Dockerfile  Makefile  app.py  pyproject.toml  readme.md  requirements.txt
services/cog_server/charts/cog-server/: Chart.yaml  values.yaml
services/cog_server/charts/cog-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
services/zarr_server/: .gitignore  Makefile  README.md  app.py  pyproject.toml  zarr_server_utils.py
spatialoperations/vectorops/: README.md
tests/: log.py  pytest.ini  test.mk
tests/services/zarr_server/: test_app.py
tests/spatialops/: config.py  test.yaml  test_arraylike.py  test_compute.py  test_fixtures.py  test_geobox_bounds.py  test_intake.py  test_rasterops.py  test_vectorops.py  test_zarr.py
tests/yamls/: econ_inputs.yaml  flooding_rp050.yaml  florida.yaml  habitat.yaml
(+10 files in other folders)
