[project]
name = "cog-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.1",
    "fastapi>=0.115.11",
    "geopandas>=1.0.1",
    "h5netcdf>=1.6.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "rio-tiler>=7.5.1",
    "rioxarray>=0.18.2",
    "uvicorn>=0.34.0",
    "xarray>=2025.3.0",
]
